# cterm

./: CLAUDE.md  Cargo.toml  README.md  SECURITY_AUDIT.md
.github/workflows/: build.yml
crates/cterm-app/: Cargo.toml
crates/cterm-app/src/: config.rs  docker.rs  file_drop.rs  file_transfer.rs  git_sync.rs  lib.rs  log_capture.rs  quick_open.rs  session.rs  shortcuts.rs
crates/cterm-app/src/crash_recovery/: mod.rs  state.rs  watchdog.rs
crates/cterm-app/src/upgrade/: mod.rs  protocol.rs  state.rs  updater.rs
crates/cterm-cocoa/: Cargo.toml
crates/cterm-cocoa/src/: app.rs  cg_renderer.rs  clipboard.rs  dialogs.rs  file_transfer.rs  keycode.rs  lib.rs  log_capture.rs  log_viewer.rs  main.rs  menu.rs  metal_renderer.rs  notification_bar.rs  preferences.rs  quick_open.rs  tab_bar.rs  tab_templates.rs  terminal_view.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-core/: Cargo.toml
crates/cterm-core/src/: cell.rs  color.rs  drcs.rs  fd_passing.rs  grid.rs  iterm2.rs  lib.rs  native_pty.rs  parser.rs  pty.rs  screen.rs  sixel.rs  streaming_file.rs  term.rs
crates/cterm-gtk/: Cargo.toml
crates/cterm-gtk/src/: app.rs  dialogs.rs  docker_dialog.rs  file_transfer.rs  lib.rs  log_viewer.rs  main.rs  menu.rs  notification_bar.rs  quick_open.rs  tab_bar.rs  tab_templates_dialog.rs  terminal_widget.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-headless/: Cargo.toml
crates/cterm-headless/src/: cli.rs  server.rs
crates/cterm-headless/src/session/: manager.rs  state.rs
crates/cterm-headless/tests/: grpc_integration.rs
crates/cterm-ui/src/: events.rs  lib.rs  traits.rs
crates/cterm-win32/: Cargo.toml
crates/cterm-win32/src/: clipboard.rs  dialog_utils.rs  dialogs.rs  docker_dialog.rs  lib.rs  log_viewer.rs  menu.rs  mouse.rs  notification_bar.rs  preferences_dialog.rs  quick_open.rs  tab_bar.rs  templates_dialog.rs  terminal_canvas.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-win32/tests/harness/: mod.rs
packaging/windows/: installer.nsi
scripts/: linux_ui_test.sh  macos_ui_test.sh  windows_ui_test.ps1
src/: main.rs
