[package]
name = "cterm-core"
version.workspace = true
edition.workspace = true
description = "Core terminal emulation library for cterm"

[dependencies]
bitflags.workspace = true
unicode-width.workspace = true
log.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
vte.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
base64.workspace = true
regex.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "namedpipeapi", "processthreadsapi", "synchapi", "winbase", "wincon", "winnt", "winerror"] }

[dev-dependencies]
env_logger.workspace = true
